fix(styles): images stretching of lazy block Logos

--- a/src/components/lazy-blocks/logos/logos.module.scss
+++ b/src/components/lazy-blocks/logos/logos.module.scss
@@ -31,6 +31,9 @@
 
 .item {
   width: 130px;
+  // fix issue of images stretching
+  object-fit: contain;
+  height: 100%;
 
   @include fullhd-down {
     width: 120px;
